// =============================================================================
// CDW "current" schema
// -----------------------------------------------------------------------------
// Spine tables (parcel, building, unit) carry the CDW_ID as component columns
// plus a generated STORED text column `cdw_id` that is the zero-padded,
// dot-delimited concatenation and serves as the TEXT primary key:
//     CCCC.cccccc.pppppppp.bbbb.uuuuu
// Lower levels are zero-filled (parcel -> ....0000.00000, building -> ....00000).
// All non-spine tables use namespaced TEXT surrogate keys (<country>.<region>.<entity>.<seq>).
// =============================================================================

// Spine
Table parcel [headercolor: #3498db] {
  country_code text [not null]
  region_code text [not null]
  parcel_seq bigint [not null]
  cdw_id text [pk, note: 'GENERATED STORED: CCCC.cccccc.pppppppp.0000.00000']
  county varchar
  owner_id text [ref: > legal_entity.legal_entity_id]
  ward int
  neighborhood varchar
  zip_code text
  census_block text
  frontage int
  zoning_class_id text [ref: > zoning_class.zoning_class_id]
}

Table building [headercolor: #3498db] {
  country_code text [not null]
  region_code text [not null]
  parcel_seq bigint [not null]
  building_seq bigint [not null]
  cdw_id text [pk, note: 'GENERATED STORED: CCCC.cccccc.pppppppp.bbbb.00000']
  parcel_cdw_id text [not null, ref: > parcel.cdw_id]
  owner_id text [ref: > legal_entity.legal_entity_id]
  use_type_id text [ref: > use_type.use_type_id]
  sq_footage int
  year_built int
}

Table unit [headercolor: #3498db] {
  country_code text [not null]
  region_code text [not null]
  parcel_seq bigint [not null]
  building_seq bigint [not null]
  unit_seq bigint [not null]
  cdw_id text [pk, note: 'GENERATED STORED: CCCC.cccccc.pppppppp.bbbb.uuuuu']
  building_cdw_id text [not null, ref: > building.cdw_id]
  owner_id text [ref: > legal_entity.legal_entity_id]
  use_type_id text [ref: > use_type.use_type_id]
  address_id text [ref: > address.address_id]
  ground_floor bool
  stories float
  windows_ac int
  central_ac int
  full_bath int
  half_bath int
  garage int
}

// Shared entities
Table legal_entity [headercolor: #3498db] {
  legal_entity_id text [pk]
  name varchar
  address_id text [ref: > address.address_id]
}

Table address [headercolor: #3498db] {
  address_id text [pk]
  raw_line text [note: 'un-componentized source address line, verbatim']
  street_number int
  street_name_prefix varchar
  street_name varchar
  street_name_suffix varchar
  secondary_designator varchar
  city varchar
  state varchar
  zip text
}

// Operations
Table permit [headercolor: #e67e22] {
  permit_id text [pk]
  permit_type_id text [ref: > permit_type.permit_type_id]
  application_date date
  issue_date date
  completion_date date
  cancel_date date
  description varchar
  cost float
  applicant_id text [ref: - legal_entity.legal_entity_id]
  contractor_id text [ref: - legal_entity.legal_entity_id]
}

Table service [headercolor: #e67e22] {
  service_id text [pk]
  parcel_id text [ref: > parcel.cdw_id]
  building_id text [ref: > building.cdw_id]
  unit_id text [ref: > unit.cdw_id]
  owner_id text [ref: > legal_entity.legal_entity_id]
  division_id text [ref: > division.division_id]
  service_date date
  service_type_id text [ref: > service_type.service_type_id]
  fee float8
}

Table condemnation [headercolor: #e67e22] {
  condemnation_id text [pk]
  inspection_id text [ref: > inspection.inspection_id]
  letter_date date
  condemnation_type varchar
  status varchar
}

Table inspection [headercolor: #e67e22] {
  inspection_id text [pk]
  building_id text [ref: > building.cdw_id]
  inspection_date date
  completion_date date
  inspection_type_id text [ref: > inspection_type.inspection_type_id]
  number_of_violations int
}

Table assessment [headercolor: #e67e22] {
  assessment_id text [pk]
  parcel_id text [ref: > parcel.cdw_id]
  assessment_date date
  assessment_amount float
  land_value float
  improvement_value float
}

Table tax_delinquency [headercolor: #e67e22] {
  tax_delinquency_id text [pk]
  legal_entity_id text [ref: > legal_entity.legal_entity_id]
  last_paid_year int
  amount_delinquent float
}

// Lookups
Table municipality [headercolor: #9b59b6] {
  municipality_id text [pk]
  municipality varchar
}

Table division [headercolor: #9b59b6] {
  division_id text [pk]
  division varchar
}

Table service_type [headercolor: #9b59b6] {
  service_type_id text [pk]
  service_type varchar
}

Table zoning_class [headercolor: #9b59b6] {
  zoning_class_id text [pk]
  zoning_class varchar
}

Table municipal_parcel_id_mapping [headercolor: #9b59b6] {
  parcel_id text [pk, ref: > parcel.cdw_id]
  municipal_parcel_id varchar [note: 'city native parcel reference (assessor handle)']
  municipality_id text [ref: > municipality.municipality_id]
}

Table use_type [headercolor: #9b59b6] {
  use_type_id text [pk]
  use_type text
}

Table permit_type [headercolor: #9b59b6] {
  permit_type_id text [pk]
  permit_type varchar
}

Table inspection_type [headercolor: #9b59b6] {
  inspection_type_id text [pk]
  inspection_type varchar
}

// Capture tables
Table exclusion_log [headercolor: #95a5a6] {
  exclusion_id text [pk]
  source_table varchar
  source_natural_key varchar
  reason varchar
  raw_payload jsonb
  excluded_at timestamptz
}

Table secondary_owner [headercolor: #95a5a6] {
  secondary_owner_id text [pk]
  parcel_id text [not null, ref: > parcel.cdw_id]
  owner_id text [not null, ref: > legal_entity.legal_entity_id]
  ownership_role varchar
  ownership_share numeric
}
